--- a/styleIndex.css
+++ b/styleIndex.css
@@ -43,3 +43,76 @@
     height: 45vh;
     background-color: aqua;
 }
+
+/* Mid Section CSS Starts */
+
+*{
+    margin:0;
+    padding: 0;
+}
+#midSection{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#midSection .row{
+    width: 100%;
+    height: max-content;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+
+}
+#midSection .row .column{
+    display: flex;
+    flex-direction: column;
+align-items: center;
+    width: 300px;
+    justify-content: space-between;
+    height: 300px;
+    padding: 20px;
+    
+}
+#midSection .row .column img{
+    width: 175px;
+    height: 175px;
+    border-radius: 50%;
+}
+#midSection .row .column button{
+    padding: 10px 30px;
+    margin: 10px 0;
+    font-size: 20px;
+    border-radius: 50px;
+    outline: none;
+    border: none;
+    
+}
+
+#midSection .row #imageColumn1{
+    position: relative;
+    top: 50px;
+}
+
+
+#midSection .row #imageColumn2{
+    position: relative;
+    top: 0;
+}
+
+#midSection .row #imageColumn3{
+    position: relative;
+    top: 50px;
+
+}
+
+@media(max-width:768px){
+    #midSection .row #imageColumn1{
+        top: 0;
+    }
+    #midSection .row #imageColumn3{
+        top: 0;
+    }
+    
+}
+
+/* Mid Section CSS Ends */
