--- a/styleIndex.css
+++ b/styleIndex.css
@@ -6,7 +6,7 @@
 }
 
 .header,.footer{
-    width: 100vw;
+    width: 100%;
     height: 50px;
 }
 
@@ -39,21 +39,21 @@
 }
 
 #heroBox{
-    width: 100vw;
+    width: 100%;
     height: 45vh;
     background-color: aqua;
 }
 
 /* Mid Section CSS Starts */
 
-*{
-    margin:0;
-    padding: 0;
-}
 #midSection{
     display: flex;
+    width: 100%;
     justify-content: center;
     align-items: center;
+    margin: 0;
+    margin-top: 30px;
+    margin-bottom: 50px;
 }
 #midSection .row{
     width: 100%;
@@ -61,12 +61,11 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-
 }
 #midSection .row .column{
     display: flex;
     flex-direction: column;
-align-items: center;
+    align-items: center;
     width: 300px;
     justify-content: space-between;
     height: 300px;
@@ -90,7 +89,7 @@ align-items: center;
 
 #midSection .row #imageColumn1{
     position: relative;
-    top: 50px;
+    top: 30px;
 }
 
 
@@ -101,7 +100,7 @@ align-items: center;
 
 #midSection .row #imageColumn3{
     position: relative;
-    top: 50px;
+    top: 30px;
 
 }
 
