--- a/CSS/styleIndex.css
+++ b/CSS/styleIndex.css
@@ -5,44 +5,15 @@
     text-decoration: none !important;
 }
 
-.header,.footer{
-    width: 100%;
-    height: 50px;
-}
-
-#webname{
-    height: 100%;
-}
-
-#siteLogo{
-    padding-left: 10px;
-}
-
-#siteLogo img{
-    width: 40px;
-}
-
-#siteName{
-    font-size: 25px;
-}
-
-#siteName a{
-    color: white !important;
-}
-
-.navbar a{
-    margin-right: 12px;
-}
-
-.navbar a:last-child{
-    margin-right: 0;
-}
+/* Hero Box starts */
 
 #heroBox{
     width: 100%;
     height: 45vh;
     background-color: aqua;
 }
+
+/* Hero Box ends */
 
 /* Mid Section CSS Starts */
 
